Changelog for mSearch2.

1.1.1 pl
==============
- Changed sort of parents filters to menuindex.
- Fixed autocomplete when unpublished resources are found.

1.1.0 pl
==============
- Improved search index and algorithm.
- Ability to specify indexed fields for search by parameter &fields=``.
- Ability to disable additional results by LIKE search by parameter &onlyIndex=``.
- Fixed loading Font Awesome.
- Added support of AjaxManager.
- [#30] [mSearch2] Added "not found" message when results are limited by snippet parameters.
- [#29] Returned lost button "Remove all queries".
- [#27] Added ability to specify properties set in element and paginator name.
- [#25] Added select filters.
- [#24] [mFilter2] Added filtering of negative numbers in slider.
- [#23] Added placeholder "results" to &toSeparatePlaceholders=`1` mode.
- Fixed ajax filtering with &toSeparatePlaceholders=`1`.
- Improved snippet mSearch2 when &returnIds=`1`.

1.0.4 pl
==============
- Improved UI for MODX 2.3.
- Added Font Awesome icons.
- Added ability to install new dictionary by double click on grid row.
- Improved chunks.

1.0.3 pl
==============
- [#21] Added support filtering by date for TV of type date.
- [#20] All templates of filters are converted to lowercase.

1.0.2 pl
==============
- [#14] Changed build filters methods.
- Fixed E_NOTICE in mFilter2.

1.0.1 pl
==============
- [#14] Added passing of the filter name in the method of build.
- Improved support of TVs with type "listbox" and "tag".
- Do not call highlight method on search results if query is empty.

1.0.0 pl1
==============
- [#10] [mFilter2] Fixed bug with sort in Safari and Firefox.
- [#9] [mFilter2] Added set of placeholder "mse2_filters_count".
- Improved load if pdoFetch class.
- Fixed possible incorrect characters in the English dictionary.
- Added manager page with dictionaries.
- Added new snippet "mSearchForm" with autocomplete.
- Improved registering of frontend scripts.